added manifest config to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.mypackage.MyClass</mainClass>
+                            <mainClass>autoemails.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
